Fix 100vh size issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 
 body {
   width: 100vh;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -179,5 +179,5 @@ padding-right: 1rem;
 
 ._loading_overlay_wrapper {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
 }
